--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QH'
 - !lcsh 'Lemmings'
+- GITenberg
 title: A New Bog Lemming (Genus Synaptomys) From Nebraska
 url: http://www.gutenberg.org/ebooks/30898
